# exercise-05

./: .ansible-lint  .gitignore  .yamllint  README.md  Vagrantfile  ansible.cfg  pyproject.toml  requirements.txt  requirements.yml  site.yml
.github/workflows/: ansible-lint.yml
environments/exercise/: inventory.yml
environments/exercise/group_vars/: postgresql.yml
environments/exercise/host_vars/: exercise.internal.yml
playbooks/: postgresql.yml
