[project]
name = "exercise-05"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ansible==11.1.0",
    "ansible-compat==24.10.0",
    "ansible-core==2.18.1",
    "ansible-lint>=25.1.0",
    "argcomplete>=3.6.2",
    "attrs==24.3.0",
    "black==24.10.0",
    "bracex==2.5.post1",
    "cffi==1.17.1",
    "click==8.1.8",
    "cryptography==44.0.0",
    "filelock==3.16.1",
    "importlib-metadata==8.5.0",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "markupsafe==3.0.2",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pycparser==2.22",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "resolvelib==1.0.1",
    "rpds-py==0.22.3",
    "ruamel-yaml==0.18.6",
    "ruamel-yaml-clib==0.2.12",
    "subprocess-tee==0.4.2",
    "wcmatch==10.0",
    "yamllint==1.35.1",
    "zipp==3.21.0",
]
